k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: express
  template:
    metadata:
      labels:
        component: express
    spec:
      containers:
        - name: express
          image: localhost:5111/k8s-backend
          ports:
            - containerPort: 3000
