k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: front
          image: mowmikubek/k8s-front:v3
          ports:
            - containerPort: 3000
