k8s/transcribe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcribe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: transcribe
  template:
    metadata:
      labels:
        component: transcribe
    spec:
      containers:
        - name: transcribe
          image: mowmikubek/transcribe_service:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "1000m"
