k8s/transcribe-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transcribe-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: transcribe
  ports:
    - port: 5000
      targetPort: 5000
