k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: kubernetes.docker.internal
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-cluster-ip-service
                port:
                  number: 3000
          - path: /express/?(.*)
            pathType: Prefix
            backend:
              service:
                name: express-cluster-ip-service  
                port:
                  number: 3000
